testa busca de ordem por id